# oghttp-cmake

./: .appveyor.yml  .cirrus.yml  .clang-format  .codecov.yml  .gitignore  .travis.yml  CMakeLists.txt  README.md  clang-format.sh
.circleci/: config.yml
checks/: CheckC18.cmake  CheckLibXML2.cmake
checks/C18/: CMakeLists.txt  main.c
checks/LibXML2/: CMakeLists.txt  main.c
checks/basic/: main.c
doc/: constant_processor.txt  constants_from_registry.txt  constants_processor.txt  generic_processor.txt  variable_processor.txt
generators/: GenerateConstantProcessor.cmake  GenerateConstantsFromRegistry.cmake  GenerateConstantsProcessor.cmake  GenerateGenericProcessor.cmake  GenerateVariableProcessor.cmake
generators/common/: config.h.in  declaration_schema.c  declaration_schema.h  macro.h  options_schema.c  options_schema.h  print.h  toolchain.cmake
generators/constant_processor/: CMakeLists.txt  data.c  data.h  main.c  max_state.c  options.c  options.h  options.xsd  options_data.c  options_data.h  print_data.h
generators/constant_processor/data/: bytes.c  bytes.h  length.c  length.h  main.c  main.h
generators/constant_processor/declaration/: constant.c  constant.h  main.c  main.h  main.xsd
generators/constant_processor/options/: constant.c  constant.h  main.c  main.h
generators/constants_from_registry/: CMakeLists.txt  constants.c  constants.h  files.c  files.h  main.c  print.h
generators/constants_processor/: CMakeLists.txt  alphabet.h  data.c  main.c  min_state_bits.c  min_state_bits.h  next_state_by_last_symbols.c  options.c  options.h  options.xsd
generators/constants_processor/data/: alphabet.c  alphabet.h  constants.c  constants.h  main.c  main.h  max_state.c  max_state.h  next_state.c  next_state.h  next_state_by_last_symbols.c  next_state_by_last_symbols.h  prefix.c  prefix.h  prefix_length.c  prefix_length.h  state.c  state.h
generators/constants_processor/declaration/: constants.c  constants.h  main.c  main.h
generators/constants_processor/options/: constants.c  constants.h  main.c  main.h
generators/generic_processor/: CMakeLists.txt  alphabet.c  alphabet.h  data.c  data.h  main.c  max_state.c  options.c  options.h  options.xsd  print.h
generators/generic_processor/options/: length.c  length.h  main.c  main.h  main.xsd
generators/variable_processor/: CMakeLists.txt  main.c
generators/variable_processor/data/: allowed_bytes.c  allowed_bytes.h  length.c  length.h  main.c  main.h  max_state.h
generators/variable_processor/declaration/: length.c  length.h  main.c  main.h
generators/variable_processor/declaration/group/: byte.c  byte.h  main.c  main.h  mode.c  mode.h  ranges.c  ranges.h  single_bytes.c  single_bytes.h
generators/variable_processor/options/: groups.c  groups.h  length.c  length.h  main.c  main.h
generators/variable_processor/options/group/: byte.c  byte.h  main.c  main.h  mode.c  mode.h  ranges.c  ranges.h  single_bytes.c  single_bytes.h
scripts/: add_remotes.sh  update.sh
scripts/registry/: update.sh
src/: CMakeLists.txt  common.h  log.h
src/generator/: GenerateConstantProcessorWrapper.cmake  GenerateConstantsFromRegistryWrapper.cmake  GenerateConstantsProcessorWrapper.cmake  GenerateVariableProcessorWrapper.cmake
src/generator/constant_processor/: main.h.in
src/generator/constants_processor/: main.c.in  main.h.in
src/generator/variable_processor/: main.h.in
src/processor/: CMakeLists.txt  GenerateConstant.cmake
src/processor/generator/: GenerateConstant.cmake  GenerateConstants.cmake  GenerateGeneric.cmake  GenerateVariable.cmake
src/processor/generator/constant/: main.c.in  main.h.in
src/processor/generator/constants/: main.c.in  main.h.in
src/processor/generator/generic/: main.c.in
src/processor/generator/variable/: main.c.in  main.h.in
src/processor/header_name/: CMakeLists.txt
src/processor/header_name/1_0/: CMakeLists.txt  declaration.xml  main.c  main.h
src/processor/header_name/1_1/: CMakeLists.txt  registry_declaration.xml
src/processor/header_name/any/: CMakeLists.txt  declaration.xml  main.c  main.h
src/processor/header_name/any_from_standard/: CMakeLists.txt  declaration.xml  main.c  main.h
src/processor/method/: CMakeLists.txt
src/processor/method/0_9/: CMakeLists.txt  main.c  main.h  options.xml
src/processor/method/1_0/: CMakeLists.txt  options.xml
src/processor/method/1_1/: CMakeLists.txt  main.c  main.h  options.xml
src/processor/version/: CMakeLists.txt
src/processor/version/1_0/: CMakeLists.txt  declaration.xml  main.c  main.h
src/processor/version/1_0_and_1_1/: CMakeLists.txt  main.c  main.h  options.xml
src/processor/version/1_1/: CMakeLists.txt  declaration.xml  main.c  main.h  options.xml
src/processor/version/any/: CMakeLists.txt  declaration.xml  main.c  main.h  options.xml
src/processor/version/any_from_standard/: CMakeLists.txt  declaration.xml  main.c  main.h  options.xml
